# Zebrafish_CLEM

./: .gitignore  LICENSE  README (2).md  README.md  env_clem_zfish1_global.yaml  fix_imports.py
4. Morphology_based_prediction_of_neuronal_functional_types/: LDA_predictions.xlsx  LICENSE  all_reconstructed_neurons_with_LDA_predictions.csv  cli.py  integrate_lda_predictions_into_metadata.py  pyproject.toml  readme.md  requirements.txt
4. Morphology_based_prediction_of_neuronal_functional_types/config/: README.md  environment.yml  path_configuration.txt
4. Morphology_based_prediction_of_neuronal_functional_types/functional_type_prediction/: README.md  __init__.py
4. Morphology_based_prediction_of_neuronal_functional_types/functional_type_prediction/classifier_prediction/: README.md  __init__.py
4. Morphology_based_prediction_of_neuronal_functional_types/scripts/: setup_data_paths.py
4. Morphology_based_prediction_of_neuronal_functional_types/src/: README.md  __init__.py
4. Morphology_based_prediction_of_neuronal_functional_types/src/morphology/: README.md  __init__.py  find_branches.py  fragment_neurite.py  nblast.py  repair_swc.py
4. Morphology_based_prediction_of_neuronal_functional_types/src/myio/: README.md  __init__.py  _parsing.py  load_cells2df.py  load_clem_table.py  load_em_table.py  load_mesh.py  load_pa_table.py
4. Morphology_based_prediction_of_neuronal_functional_types/src/util/: README.md  __init__.py  (+4 more)
4. Morphology_based_prediction_of_neuronal_functional_types/tests/: README.md  test_cell_paths.py  test_color_unification.py  test_myio.py
(+188 files in other folders)
