[project]
name = "hbsf"
version = "0.1.0"
description = "Zebrafish hindbrain structure-function analysis"
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*", "functional_type_prediction*"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["functional_type_prediction", "src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = [
    "D100", "D104", "D203", "D213",
    "D401",  # Non-imperative mood in docstrings (too noisy for existing codebase)
    "D103", "D105",  # Missing docstrings in legacy code
    "SIM108",  # Ternary operator style preference
    "N801", "N802", "N803", "N806", "N812", "N813", "N816", "N818", "N999",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D102", "E402"]
"**/tests/**" = ["D102", "E402"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["core", "utils", "myio"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
